todoリスト画面の追加

--- a/TodoApplication/src/main/resources/application.properties
+++ b/TodoApplication/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# H2DB
+spring.h2.console.enabled=true
 
+# select結果のアンダースコアをキャメルケースに変換する
+mybatis.configuration.map-underscore-to-camel-case=true
+
+# MyBatis
+mybatis.mapper-locations=classpath*:/mapper/*.xml
